fix content jump on navigation

--- a/templates/common/root/app/styles/_globals.scss
+++ b/templates/common/root/app/styles/_globals.scss
@@ -1,3 +1,7 @@
+htmnl {
+  overflow-y: scroll;
+}
+
 #root
 {
   position: relative; //View will be positioned absolute during animations
